# linkly-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  qr.rs
src/api/: client.rs  mod.rs  models.rs
src/forms/: create_form.rs  edit_form.rs  import.rs  mod.rs
src/ui/: auth.rs  create.rs  detail.rs  import.rs  list.rs  mod.rs  workspace.rs
