[package]
name = "linkly-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI for managing Linkly short links"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-input = "0.11"
anyhow = "1"
csv = "1"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
